--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,8 @@
 image: java:8
 script:
+  - export NPM_CONFIG_CACHE=/tmp/npm
+  - export GRADLE_USER_HOME=/tmp/gradle
   - ./gradlew build
-  
+cache:
+  - /tmp/gradle
+  - /tmp/npm
